hard-gists/b2af7d980eb217a0af07/run.log
=== Docker Run Log for b2af7d980eb217a0af07 ===
Started at: Mi 29. Okt 19:25:17 CET 2025

[2025-10-29 19:25:17] START: Running container for b2af7d980eb217a0af07
[2025-10-29 19:25:17] SUCCESS: Container 98fa12e7ff94c5765c50481a6d0e071e52ed0f379544ed67f190299fa9148406 started for b2af7d980eb217a0af07
=== Container logs for b2af7d980eb217a0af07 ===
  File "/snippet.py", line 67
    print "args", vars(args)
    ^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for b2af7d980eb217a0af07 ===
[2025-10-29 19:25:19] INFO: Container 98fa12e7ff94c5765c50481a6d0e071e52ed0f379544ed67f190299fa9148406 has stopped
